# Hyper-ZiLLA

./: .env  .env.example  .gitignore  00.sh  Bash0.sh  Dockerfile  Next.sh  PRODUCTION DEPLOYMENT STRUCTURE.sh  PROPRIETARY_AI.md  README.md  bash.sh  docker-compose.yml  first.sh  main.py  package-lock.json  pyproject.toml  quick_start.sh  requirements.txt  setup.py
.github/workflow/: codeql_python.yml
.github/workflows/: bandit.yml  codeql.yml
COMMAND_CENTER/templates/: dashboard.html
HyperZilla/: __init__.py  models.py
HyperZilla/COMMAND_CENTER/: app.py
HyperZilla/COMMAND_CENTER/static/css/: command_center.css
HyperZilla/COMMAND_CENTER/static/js/: command_center.js
HyperZilla/COMMAND_CENTER/templates/: facial_intel_panel.html
HyperZilla/INTELLIGENCE_ARM/AI_OSINT/: ai_osint_orchestrator.py
HyperZilla/INTELLIGENCE_ARM/DIGITAL_OSINT/: integration_bridge.py
HyperZilla/INTELLIGENCE_ARM/ENTERPRISE_SECURITY/: security_bridge.py
HyperZilla/INTELLIGENCE_ARM/FACIAL_INTEL/: facial_ai_engine.py  forensic_protocols.py
HyperZilla/INTELLIGENCE_ARM/PHYSICAL_INTEL/: sensor_fusion.js
HyperZilla/INTELLIGENCE_ARM/PHYSICAL_INTEL/advanced_sensors/: sensor_manager.js
HyperZilla/INTELLIGENCE_ARM/PHYSICAL_INTEL/encrypted_vault/: quantum_encrypted_storage.js
HyperZilla/OPERATIONS_ARM/: activation_test.py
HyperZilla/OPERATIONS_ARM/AGENT_SYSTEM/: agent_integrity.py  capability_registry.py
HyperZilla/OPERATIONS_ARM/DEPLOYMENT_ENGINE/: universal_installer.py
HyperZilla/OPERATIONS_ARM/EVASION_INFRASTRUCTURE/anti_detection/: advanced_captcha_evasion.py  core_evasion.py
HyperZilla/OPERATIONS_ARM/EVASION_INFRASTRUCTURE/anti_tracking/: core_anti_tracking.py
HyperZilla/OPERATIONS_ARM/EVASION_INFRASTRUCTURE/forensic_resistance/: memory_obfuscation.py  (+1 more)
HyperZilla/SUPPORT_SYSTEMS/: alert_engine.py
HyperZilla/SUPPORT_SYSTEMS/configs/: hyperzilla_global.yaml
HyperZilla/ZILLA_CORE/: __init__.py
HyperZilla/ZILLA_CORE/ai_hierarchy/: director_ai.py  tactical_analyst.py
HyperZilla/ZILLA_CORE/fusion_engine/: cross_domain_correlator.py
HyperZilla/ZILLA_CORE/war_room/: situational_awareness.py
Zilla-Modules/DARK-ZiLLA/: README.md  codex_history.json  codezilla.db  pyproject.toml  setup.py  test_file.cpp  test_file.py
Zilla-Modules/DARK-ZiLLA/core/native/: .aiexclude  .gitignore  CMakeLists.txt  README.md  build.sh  config.json  main.cpp  run.sh  wiki.md
Zilla-Modules/DARK-ZiLLA/core/native/include/analysis/: analysis_result.h
Zilla-Modules/DARK-ZiLLA/core/native/include/core/: configuration_manager.h
Zilla-Modules/DARK-ZiLLA/core/native/include/db/: database_manager.h
Zilla-Modules/DARK-ZiLLA/core/native/include/ui/: menu_system.h
Zilla-Modules/DARK-ZiLLA/core/native/include/utils/: colors.h  scc_types.h
Zilla-Modules/DARK-ZiLLA/core/native/src/analysis/: analysis_manager.cpp  analysis_manager.h
Zilla-Modules/DARK-ZiLLA/core/native/src/analysis/ai/: ai_engine.cpp  ai_engine.h  ai_service.py
Zilla-Modules/DARK-ZiLLA/core/native/src/analysis/languages/: base_analyzer.h  cpp_analyzer.cpp  cpp_analyzer.h  go_analyzer.h  java_analyzer.h  javascript_analyzer.h  python_analyzer.h
Zilla-Modules/DARK-ZiLLA/core/native/src/core/: configuration_manager.cpp  database_manager.cpp  error_handler.cpp  error_handler.h
Zilla-Modules/DARK-ZiLLA/core/native/src/ui/: menu_system.cpp
Zilla-Modules/DARK-ZiLLA/core/native/src/utils/: logger.cpp  logger.h  scc_parser.cpp  scc_parser.h
Zilla-Modules/DARK-ZiLLA/core/native/test/: system_test.cpp
Zilla-Modules/DARK-ZiLLA/core/native/test_files/: vulnerable.cpp
Zilla-Modules/DARK-ZiLLA/reports/: codex_report_1767450580.md  codex_report_1767450635.json  codex_report_1767450635.md  codex_report_1767450678.json  codex_report_1767450678.md
Zilla-Modules/DARK-ZiLLA/src/codex_enterprise/: __init__.py  analyzer.py  cli.py  codex_history.json  concurrency.py  config.py  history.py  main.py  models.py  reporting.py  ui.py
Zilla-Modules/DARK-ZiLLA/src/codex_enterprise/reports/: codex_report_1767175440.json
Zilla-Modules/Dam-Zilla/: .gitignore  Dockerfile  Makefile  README.md  configure  deploy_fortress.sh  docker-compose.yml  package.json  requirements.txt  startup_consolidated.sh  system_integrity_check.js
Zilla-Modules/Dam-Zilla/config/: configure  configure.yaml  performance.yaml
Zilla-Modules/Dam-Zilla/installers/: install_zilla_dam.sh
Zilla-Modules/Dam-Zilla/network _graphs/: NodeRenderer.tsx
Zilla-Modules/Dam-Zilla/security/: operational_security.js
Zilla-Modules/DarkZilla/: .bandit.yml  .dockerignore  .gitignore  .gitleaks.toml  .hadolint.yaml  .safety-policy.yml  .security.ignore  .trivyignore  Cargo.toml  Makefile  README.md  test_build.sh
Zilla-Modules/DarkZilla/deb_build/DEBIAN/: control  postinst
Zilla-Modules/DarkZilla/scripts/: create-deb.sh  create-rpm.sh  create-tarball.sh
Zilla-Modules/DarkZilla/scripts/rpm_build/SPECS/: entynet-enterprise.spec
Zilla-Modules/DarkZilla/src/: config.rs  exploits.rs  lib.rs  main.rs  network.rs  reporting.rs  security.rs
Zilla-Modules/DarkZilla/tests/: config_tests.rs  integration_tests.rs
Zilla-Modules/Geozilla/: .gitignore  Dokerfile  Makefile  README.md  deploy-ultimate.sh  docker-compose.yml  go.mod  json
Zilla-Modules/Geozilla/backend/: go.mod  json
Zilla-Modules/Geozilla/k8s/: cognizilla-deployment.yaml  monster-orchestrator.yaml
Zilla-Modules/Geozilla/scripts/: deploy.sh  install-macos.sh  install-termux.sh  install-wsl.sh
Zilla-Modules/HyperZilla/COMMAND_CENTER/: app.py
Zilla-Modules/NanozillA/: requirements.txt
Zilla-Modules/Net-ZiLLA/: Makefile  README.md  config.yaml  coverage.out  go.mod  go.sum
Zilla-Modules/Zillagram/: .env.example  Dockerfile  Dockerfile.api  all_code.txt  deploy.sh  docker-compose.production.yml  requirements-api.txt  requirements.txt
Zilla-Modules/net-zilla/config/: default.yaml
Zilla-Modules/pentestzilla/: Makefile  README.md  pz.sh
config/: __init__.py  settings.py
data/: hyperzilla_dev.db
tests/: __init__.py  conftest.py  test_basic.py
utils/: __init__.py  helpers.py  security.py
(+203 files in other folders)
