[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyper-zilla"
version = "1.0.0"
description = "Advanced security intelligence with proprietary Hyper-ZiLLA AI technology"
authors = [
    {name = "Hyper-ZiLLA Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.0",
    "numpy>=1.24.0",
    "opencv-python>=4.7.0",
    "pillow>=9.5.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.2.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "selenium>=4.10.0",
    "beautifulsoup4>=4.12.0",
    "cryptography>=41.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "bandit>=1.7.5",
    "mypy>=1.0.0",
]

[project.scripts]
hyperzilla = "main:main"

[tool.black]
line-length = 100
target-version = ['py38']
