[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-enterprise"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Cyberzilla Codex - Enterprise Code Quality Analyzer"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonschema",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/codex-enterprise"
"Bug Tracker" = "https://github.com/yourusername/codex-enterprise/issues"

[project.scripts]
codex = "codex_enterprise.cli:main"
