[package]
name = "entynet-pentest"
version = "3.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.0"
pnet = "0.34.0"
sysinfo = "0.29.0"
nix = "0.26.0"
indicatif = "0.17.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0.0"
anyhow = "1.0.0"
thiserror = "1.0.0"
